cargo-features = ["profile-rustflags", "trim-paths"]

[package]
name = "hsize"
version = "0.1.0"
edition = "2021"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
rustflags = ["-Zlocation-detail=none"]
strip = true
trim-paths = true

[profile.small]
inherits = "release"
opt-level = "z"

[profile.dev]
rustflags = ["-Zshare-generics"]

[dependencies]
clap = { version = "4", default-features = false, features = [
  "color",
  "derive",
  "env",
  "help",
  "std",
  "usage",
] }
num-derive = "0"
num-traits = "0"
regex = { version = "1", default-features = false, features = [
  "unicode-perl",
], optional = true }

[features]
default = ["replace"]
replace = ["regex"]
