cargo-features = ["profile-rustflags", "trim-paths"]

[package]
name = "hsize"
version = "0.1.0"
edition = "2021"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
rustflags = ["-Zlocation-detail=none"]
strip = true
trim-paths = true

[profile.small]
inherits = "release"
opt-level = "z"

[profile.dev]
rustflags = ["-Zshare-generics", "-Zthreads=0"]

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
num-derive = "0"
num-traits = "0"
oorandom = { version = "11", optional = true }
regex = { version = "1", optional = true }

[features]
default = ["replace"]
replace = ["oorandom", "regex"]
