[package]
name = "hsize"
version = "0.1.0"
edition = "2021"
description = "Convert file sizes to and from human-readable units"
license = "LGPL-3.0-or-later"
repository = "https://github.com/ErrorNoInternet/hsize"
keywords = [
  "converter",
  "utility",
  "regex",
  "humanize",
  "human-size",
  "file-size",
]
categories = [
  "command-line-interface",
  "command-line-utilities",
  "mathematics",
  "text-processing",
]

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true

[profile.small]
inherits = "release"
opt-level = "z"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
clap_complete = { version = "4", optional = true }
clap_mangen = { version = "0", optional = true }
fastrand = { version = "2", optional = true }
num-derive = "0"
num-traits = "0"
regex = { version = "1", optional = true }

[features]
default = ["replace"]

replace = ["dep:fastrand", "dep:regex"]
completions = ["dep:clap_complete"]
manpages = ["dep:clap_mangen"]
